--- a/index.html
+++ b/index.html
@@ -1165,8 +1165,8 @@
                         <li><a href="#home" class="active" aria-current="page">Home</a></li>
                         <li><a href="#categories">Services</a></li>
                         <li><a href="#emergency-numbers">Emergency Numbers</a></li>
-                        <li><a href="#about">About Us</a></li>
-                        <li><a href="#contact-footer">Contact</a></li>
+                        <li><a href="#about-page">About Us</a></li>
+                        <li><a href="#contact-page-section">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -1331,13 +1331,13 @@
                 </div>
         </section>
 
-        <section class="about-section" id="about">
+        <section class="about-section" id="about-page">
             <div class="container">
                 <div class="about-content">
                     <h2>About Global EmergencyFinder</h2>
                     <p>Global EmergencyFinder is a non-profit initiative dedicated to providing immediate and reliable access to critical emergency services around the globe. In moments of crisis, every second counts, and our mission is to ensure that anyone, anywhere, can quickly locate the help they need.</p>
                     <p>We leverage robust public data sources, primarily **Google Places API**, to compile our directory. This data is regularly updated by Google and its community. While we strive for accuracy, the real-time availability of specific services (e.g., specific pharmacy opening hours, shelter bed availability) can vary and should always be verified by contacting the service directly.</p>
-                    <p>If you represent an emergency service and would like to be listed or update your information, please <a href="#contact-footer" style="color: var(--primary); font-weight: 600;">contact us</a>.</p>
+                    <p>If you represent an emergency service and would like to be listed or update your information, please <a href="#contact-page-section" style="color: var(--primary); font-weight: 600;">contact us</a>.</p>
                 </div>
             </div>
         </section>
@@ -1361,8 +1361,8 @@
                         <li><a href="#home">Home</a></li>
                         <li><a href="#categories">Service Categories</a></li>
                         <li><a href="#emergency-numbers">Emergency Numbers</a></li>
-                        <li><a href="#about">About Us</a></li>
-                        <li><a href="#contact-footer">Contact</a></li>
+                        <li><a href="#about-page">About Us</a></li>
+                        <li><a href="#contact-page-section">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-column">
@@ -1384,7 +1384,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>© 2025 Global EmergencyFinder. All rights reserved. | <a href="#privacy-policy">Privacy Policy</a> | <a href="#terms-of-service">Terms of Service</a></p>
+                <p>© 2025 Global EmergencyFinder. All rights reserved. | <a href="#privacy-policy-section">Privacy Policy</a> | <a href="#terms-of-service-section">Terms of Service</a></p>
             </div>
         </div>
     </footer>
@@ -1415,7 +1415,57 @@
         </div>
     </div>
 
-    <section class="content-page" id="privacy-policy" style="padding-top: 6rem;">
+    <!-- START: Embedded content from about.html, contact.html, privacy.html, terms.html -->
+
+    <!-- About Us Section (from about.html) -->
+    <section class="content-page" id="about-page" style="padding-top: 6rem;">
+        <h2 style="text-align: center; margin-bottom: 2.5rem; font-family: 'Poppins', sans-serif; color: var(--primary); font-size: 2.5rem; font-weight: 700;">About Global EmergencyFinder</h2>
+        <p>Global EmergencyFinder is a non-profit initiative dedicated to providing immediate and reliable access to critical emergency services around the globe. In moments of crisis, every second counts, and our mission is to ensure that anyone, anywhere, can quickly locate the help they need.</p>
+
+        <h3 style="color: var(--dark); font-family: 'Poppins', sans-serif; font-size: 1.8rem; margin-top: 2rem; margin-bottom: 1rem; border-bottom: 1px solid var(--gray); padding-bottom: 0.5rem;">Our Mission</h3>
+        <p>To empower individuals worldwide by offering a fast, intuitive, and comprehensive directory of emergency services, utilizing advanced technology to bridge the gap between people in need and available support.</p>
+
+        <h3 style="color: var(--dark); font-family: 'Poppins', sans-serif; font-size: 1.8rem; margin-top: 2rem; margin-bottom: 1rem; border-bottom: 1px solid var(--gray); padding-bottom: 0.5rem;">Our Vision</h3>
+        <p>A world where geographical barriers and language differences never hinder access to vital emergency assistance, ensuring safety and well-being for all.</p>
+
+        <h3 style="color: var(--dark); font-family: 'Poppins', sans-serif; font-size: 1.8rem; margin-top: 2rem; margin-bottom: 1rem; border-bottom: 1px solid var(--gray); padding-bottom: 0.5rem;">How We Work</h3>
+        <p>We leverage robust public data sources, primarily **OpenStreetMap**, to aggregate a vast network of hospitals, fire departments, police stations, shelters, pharmacies, veterinary clinics, and community support centers. Our system is designed to use real-time location data (with your permission) and intelligent search algorithms to pinpoint the closest and most relevant services.</p>
+        <p>We believe in collaboration and accuracy. Our directory is continuously updated through automated processes and community contributions. We cross-reference data with official sources like the World Health Organization (WHO) and the International Federation of Red Cross and Red Crescent Societies (IFRC) to maintain the highest level of data integrity.</p>
+
+        <h3 style="color: var(--dark); font-family: 'Poppins', sans-serif; font-size: 1.8rem; margin-top: 2rem; margin-bottom: 1rem; border-bottom: 1px solid var(--gray); padding-bottom: 0.5rem;">Our Commitment to You</h3>
+        <ul>
+            <li>**Accuracy:** We strive to provide the most accurate and up-to-date information possible. However, as our data is crowd-sourced, some details (like real-time operating hours or specific service availability) may vary. Always verify critical information directly with the service provider.</li>
+            <li>**Accessibility:** Our platform is designed to be easy to use on any device, ensuring help is just a few taps away.</li>
+            <li>**Global Reach:** We aim to cover every corner of the world, making emergency assistance universally accessible.</li>
+            <li>**Free Service:** Global EmergencyFinder is a completely free public service, funded through ethical advertisements to support our operational costs.</li>
+        </ul>
+
+        <p>For inquiries, partnerships, or to report outdated information, please don't hesitate to <a href="#contact-page-section">contact us</a>.</p>
+    </section>
+
+    <!-- Contact Us Section (from contact.html) -->
+    <section class="content-page" id="contact-page-section" style="padding-top: 6rem;">
+        <h2 style="text-align: center; margin-bottom: 2.5rem; font-family: 'Poppins', sans-serif; color: var(--primary); font-size: 2.5rem; font-weight: 700;">Contact Us</h2>
+        <p>We're here to help! Whether you have a question, feedback, or need to update information for an emergency service, please reach out to us using the methods below.</p>
+
+        <div class="contact-info">
+            <h3 style="color: var(--dark); font-family: 'Poppins', sans-serif; font-size: 1.8rem; margin-top: 2rem; margin-bottom: 1rem; border-bottom: 1px solid var(--gray); padding-bottom: 0.5rem;">General Inquiries</h3>
+            <p><i class="fas fa-envelope"></i> Email: <a href="mailto:spreadinghappiness@gmail.com">spreadinghappiness@gmail.com</a></p>
+            <p><i class="fas fa-phone-alt"></i> Phone: <a href="tel:0000000000">0000000000</a></p>
+
+            <h3 style="color: var(--dark); font-family: 'Poppins', sans-serif; font-size: 1.8rem; margin-top: 2rem; margin-bottom: 1rem; border-bottom: 1px solid var(--gray); padding-bottom: 0.5rem;">Address</h3>
+            <p><i class="fas fa-map-marker-alt"></i>GHAZIABAD<br>UTTAR PRADESH INDIA 201206</p>
+
+            <h3 style="color: var(--dark); font-family: 'Poppins', sans-serif; font-size: 1.8rem; margin-top: 2rem; margin-bottom: 1rem; border-bottom: 1px solid var(--gray); padding-bottom: 0.5rem;">Service Listing Updates</h3>
+            <p>If you represent an emergency service and need to list your organization or update existing information, please email us with "Service Update" in the subject line at <a href="mailto:spreadinghappiness@gmail.com">spreadinghappiness@gmail.com</a>.</p>
+
+            <h3 style="color: var(--dark); font-family: 'Poppins', sans-serif; font-size: 1.8rem; margin-top: 2rem; margin-bottom: 1rem; border-bottom: 1px solid var(--gray); padding-bottom: 0.5rem;">Feedback & Suggestions</h3>
+            <p>Your input helps us improve! Share your thoughts on how we can make Global EmergencyFinder even better by emailing us at <a href="mailto:spreadinghappiness@gmail.com">spreadinghappiness@gmail.com</a>.</p>
+        </div>
+    </section>
+
+    <!-- Privacy Policy Section (from privacy.html) -->
+    <section class="content-page" id="privacy-policy-section" style="padding-top: 6rem;">
         <h2 style="text-align: center; margin-bottom: 2.5rem; font-family: 'Poppins', sans-serif; color: var(--primary); font-size: 2.5rem; font-weight: 700;">Privacy Policy</h2>
         <p>At Global EmergencyFinder, your privacy is paramount. This policy outlines how we collect, use, and protect your information when you use our service.</p>
 
@@ -1450,10 +1500,11 @@
         <p>If we decide to change our privacy policy, we will post those changes on this page. This policy was last modified on July 11, 2025.</p>
 
         <h3 style="color: var(--dark); font-family: 'Poppins', sans-serif; font-size: 1.8rem; margin-top: 2rem; margin-bottom: 1rem; border-bottom: 1px solid var(--gray); padding-bottom: 0.5rem;">Contacting Us</h3>
-        <p>If you have any questions regarding this privacy policy, you may contact us using the information provided on our <a href="#contact-footer">Contact Us</a> page.</p>
+        <p>If you have any questions regarding this privacy policy, you may contact us using the information provided on our <a href="#contact-page-section">Contact Us</a> page.</p>
     </section>
 
-    <section class="content-page" id="terms-of-service" style="padding-top: 6rem;">
+    <!-- Terms of Service Section (from terms.html) -->
+    <section class="content-page" id="terms-of-service-section" style="padding-top: 6rem;">
         <h2 style="text-align: center; margin-bottom: 2.5rem; font-family: 'Poppins', sans-serif; color: var(--primary); font-size: 2.5rem; font-weight: 700;">Terms of Service</h2>
         <p>Welcome to Global EmergencyFinder! By accessing or using our website, you agree to comply with and be bound by the following terms and conditions of use. Please review these terms carefully.</p>
 
@@ -1488,13 +1539,15 @@
         <p>These terms shall be governed by and construed in accordance with the laws of [Your Country/State], without regard to its conflict of law principles.</p>
 
         <h3 style="color: var(--dark); font-family: 'Poppins', sans-serif; font-size: 1.8rem; margin-top: 2rem; margin-bottom: 1rem; border-bottom: 1px solid var(--gray); padding-bottom: 0.5rem;">9. Contact Information</h3>
-        <p>For any questions regarding these Terms of Service, please contact us via our <a href="#contact-footer">Contact Us</a> page.</p>
+        <p>For any questions regarding these Terms of Service, please contact us via our <a href="#contact-page-section">Contact Us</a> page.</p>
         <p>Last updated: July 11, 2025</p>
     </section>
 
+    <!-- END: Embedded content -->
+
     <script>
         // --- Configuration (YOUR GOOGLE MAPS PLATFORM API KEY) ---
-        const Maps_API_KEY = "AIzaSyCmazSL_l8ubYn9atMI2ynpnYu6Ewh4XUY"; // Updated Google Maps API Key
+        const Maps_API_KEY = "AIzaSyD92j3nHCEuY3u9Tb7ru-IbVtf5NOsITOk"; // Updated Google Maps API Key
         // --- END Configuration ---
 
         // Mapping of country names to ISO 3166-1 alpha-2 codes for flags
@@ -1618,7 +1671,7 @@
             if (position) {
                 try {
                     // Use Google Geolocation API for more precise country detection if API key is available
-                    if (Maps_API_KEY && Maps_API_KEY !== "YOUR_Maps_API_KEY") {
+                    if (Maps_API_KEY && Maps_API_KEY !== "YOUR_GOOGLE_MAPS_API_KEY") {
                         const geoApiUrl = `https://www.googleapis.com/geolocation/v1/geolocate?key=${Maps_API_KEY}`;
                         const geoApiResponse = await fetch(geoApiUrl, {
                             method: 'POST',
@@ -1674,7 +1727,7 @@
          * @param {object|null} searchCoords - Optional: {latitude, longitude} if search is based on direct geolocation.
          */
         async function searchServices(searchCoords = null) {
-            if (!Maps_API_KEY || Maps_API_KEY === "YOUR_Maps_API_KEY") {
+            if (!Maps_API_KEY || Maps_API_KEY === "YOUR_GOOGLE_MAPS_API_KEY") {
                 displayError("Google Maps API Key is missing or invalid. Please configure it in script.js for search functionality.");
                 return;
             }
@@ -2084,7 +2137,7 @@
             let emergencyNumber = '112';
 
             try {
-                if (!Maps_API_KEY || Maps_API_KEY === "YOUR_Maps_API_KEY") { // Still check for the placeholder
+                if (!Maps_API_KEY || Maps_API_KEY === "YOUR_GOOGLE_MAPS_API_KEY") { // Still check for the placeholder
                     throw new Error("Google Maps API Key is missing for premium geolocation and places search. Falling back to browser's geolocation.");
                 }
 
@@ -2154,7 +2207,7 @@
         }
 
         async function findNearestServiceAndRedirect(lat, lon, serviceType) {
-            if (!Maps_API_KEY || Maps_API_KEY === "YOUR_Maps_API_KEY") { // Still check for the placeholder
+            if (!Maps_API_KEY || Maps_API_KEY === "YOUR_GOOGLE_MAPS_API_KEY") { // Still check for the placeholder
                 alert("Google Maps API Key is missing for directions. Please configure it in script.js.");
                 return;
             }
